@@ -1,4 +1,4 @@
-\documentclass[a4paper, openany]{memoir}
+\documentclass[a4paper, openany]{blocksbook}
 
 \newcommand{\rdup}{\textbf{rdup}}
 \newcommand{\cmd}[1]{\texttt{#1}}
@@ -6,10 +6,6 @@
 \newcommand{\path}[1]{\texttt{#1}}
 \newcommand{\flag}[1]{\textit{#1}}
 
-%%\pagestyle{compagnion}
-%% this is really cool
-\pagestyle{ruled}
-\chapterstyle{demo}
 \begin{document}
 
 %%\title{\rdup{} -- Easy (Personal) Backups}
