@@ -4,6 +4,8 @@ TODO:
 o limit modifier understand k/m/g suffixes
 o check if monthday.sh handles multiple changes on 1 day
 
+o split off rdup-utils and rdup-core
+
 
 :rdup:
 :tests:
