@@ -1,5 +1,6 @@
 18 Jun 2006: 0.2.14 Miek <miek@miek.nl>
    -- bugfixes and new features --
+   * dump.sh now wraps around miror.pl, gzip.pl and crypt.sh
    * Added pl-tools/ directory for perl contributed scripts:
      added gzip.pl and mirror.pl both from Mark J Hewitt
      These are up to 50 times faster than the shell scripts!
